--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,11 @@ html, body, #root {
 }
 
 body {
+  background: linear-gradient(135deg, #BFDEF3 0%, #B9E9E9 100%);
   font-family: 'Inter', ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-  @apply bg-[#FAFAFA] text-black antialiased;
+  @apply text-black antialiased;
 }
+
 
 .bg-
 .container-page {
@@ -37,10 +39,23 @@ body {
 }
 /* bg-gradient-to-r from-[#4A90E2] to-[#6C63FF] */
 
+
+.card-bg{
+  @apply bg-white/70 backdrop-blur-md;
+}
+
 .btn-primary {
-  @apply inline-flex items-center gap-2 rounded-lg bg-[#1E40AF]  hover:bg-[#1e40afe3] hover:opacity-90 text-white px-8 transition-colors;
+   background: linear-gradient(135deg, #b583c8 0%, #00416A 100%);
+  @apply inline-flex items-center gap-2 rounded-lg hover:shadow-lg hover:opacity-90 text-white px-8 transition-colors;
+}
+  
+navbar:hover{
+  background: linear-gradient(135deg, #b583c8 0%, #00416A 100%);
 }
 
 .btn-secondary {
-  @apply inline-flex items-center gap-2 rounded-lg border-2 border-[#6C63FF] hover:bg-[#1E40AF]   text-black px-4 py-2  hover:text-white transition-colors;
+  @apply inline-flex items-center gap-2 rounded-lg border-2 border-[#00416A]    text-black px-4 py-2 hover:shadow-lg hover:text-white transition-colors;
+}
+.btn-secondary:hover{
+   background: linear-gradient(135deg, #b583c8 0%, #00416A 100%);
 }
